Fix allignment in hero section
content in .hero-left-part was too high. It is now alligned accordingly.

--- a/styles.css
+++ b/styles.css
@@ -44,22 +44,19 @@
 .hero-section {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
   padding: 40px 30px 0px;
   gap: 10px;
   width: 1024px;
   height: 446px;
 }
 
-.left-part {
+.hero-left-part {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   padding: 0px 0px 60px;
   gap: 30px;
-  width: 477px;
-  height: 406px;
 }
 
 .title {
@@ -234,7 +231,7 @@
 .top-section-bg {
   position: absolute;
   width: 1023.5px;
-  height: 517px;
+  height: 620px;
   left: 0.5px;
   top: -1px;
   z-index: 0;
@@ -255,12 +252,12 @@
   height: 517px;
   left: 0px;
   top: 0px;
-
   background:
   linear-gradient(312.73deg,
   rgba(217, 217, 217, 0.44) 17.61%,
   rgba(217, 217, 217, 0) 55.85%);
 }
+
 /* Top Section - End */
 
 /* Key Benefits Section - Start */
